# dicom2nifti_rs

./: .gitignore  Cargo.toml  README.md
examples/: debug_bval.rs  debug_group.rs
src/: main.rs  nifti_write.rs  spatial.rs
