[package]
name = "dicom2nifti-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dicom-core = "0.10"
dicom-object = "0.10"
dicom-pixeldata = { version = "0.10", features = ["openjp2"] }
dicom-transfer-syntax-registry = { version = "0.10", features = ["openjp2"] }
flate2 = "1"
num-traits = "0.2"
rayon = "1"
walkdir = "2"

[profile.release]
opt-level = 3
